# scara_ros2_motion_planner

./: .gitignore  justfile
src/: README.md
src/assets/: plot__RRTstarView.py  plot_potField.py
src/rosbag/rosbag_motion_planner_apf_rrtstar/: metadata.yaml
src/scara_robot_simulation/: package.xml  setup.cfg  setup.py
src/scara_robot_simulation/config/: scara_controllers.yaml  scara_view.rviz
src/scara_robot_simulation/description/urdf/: scara_rrrp.ros2_control.xacro  scara_rrrp.urdf.xacro
src/scara_robot_simulation/launch/: scara_simulation.launch.py  view_robot.launch.py
src/scara_robot_simulation/scara_robot_simulation/scripts/: RRTstar_planning_node.py  adaptative_APF_node.py  jacobian_kinematics_node.py  kinematics_node.py  potential_fields_planning_node.py
src/scara_robot_simulation/worlds/: empty_world.world  obstacle_world.world
