<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_robot_simulation</name>
  <version>1.0.0</version>
  <description>Implementation of motion planning algorithms (Potencial fiels and RRT) for an SCARA manipulator with ROS2/Gazebo.</description>
  <maintainer email="vrmc@ic.ufal.br">Vinicius RM Carvalho</maintainer>
  <author email="pauloroberto.santos@edge.ufal.br">Paulo Roberto</author>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
